[gd_scene load_steps=7 format=3 uid="uid://bhb5py0y5vtlr"]

[ext_resource type="Script" path="res://main.gd" id="1_03ppx"]
[ext_resource type="PackedScene" uid="uid://dr8svu1aldlab" path="res://player.tscn" id="1_8380l"]
[ext_resource type="PackedScene" uid="uid://bbtihc5l1t2g3" path="res://bullet.tscn" id="1_bisxe"]
[ext_resource type="PackedScene" uid="uid://d0dbjlnk1rn6a" path="res://enemy.tscn" id="2_goo8v"]
[ext_resource type="PackedScene" uid="uid://bigxu6beu8qxd" path="res://gun.tscn" id="4_ephct"]

[sub_resource type="Curve2D" id="Curve2D_3wi6l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_03ppx")
enemy_scene = ExtResource("2_goo8v")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.505882, 0.576471, 1)

[node name="Bullet" parent="." instance=ExtResource("1_bisxe")]
process_mode = 4
visible = false

[node name="Enemy" parent="." instance=ExtResource("2_goo8v")]
process_mode = 4
visible = false
position = Vector2(369, 286)

[node name="Player" parent="." instance=ExtResource("1_8380l")]
position = Vector2(256, 286)

[node name="Gun" parent="." instance=ExtResource("4_ephct")]
process_mode = 4
visible = false

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3wi6l")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemyPath"]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
